# id321

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.dev  bootstrap  configure.ac  id321.1
acinclude/: iconv_ucs2_with_bom.m4
compat/: Makefile.am  compat.h  dummy.c  iconv_ucs2.h  iconv_wrap.h  strnlen.c
docs/: usage.txt
include/: alias.h  common.h  compat.h  crop.h  dump.h  file.h  framelist.h  frames.h  frm_comm.h  frm_tcon.h  iconv_ucs2.h  iconv_wrap.h  id3v1.h  id3v1_genres.h  id3v1e_speed.h  id3v2.h  opts.h  output.h  params.h  synchsafe.h  trim.h  u32_char.h
lib313/: .gitignore  COPYING  Makefile.am  Makefile.dev  README  configure.ac  lib313.h  unpack.c
lib313/include/: compat.h  lib313int.h
lib313/src/: Makefile.am  compat.c  estimate.c  pack.c  unpack.c
specs/: id3v1.2.txt  id3v1.2.txt.fmt  id3v2.3.0  id3v2.4.0-frames  id3v2.4.0-structure  links.txt
src/: Makefile.am  alias.c  alias.h  common.c  common.h  compat.c  copy.c  crop.c  delete.c  dump.c  dump.h  file.c  framelist.c  frames.c  frames.h  frm_comm.c  frm_comm.h  frm_tcon.c  frm_tcon.h  frm_trck.c  frm_trck.h  gen  get.c  help.c  iconv_ucs2.c  id3v1.c  id3v1.h  id3v1_genres.c  id3v1e_speed.c  id3v2.c  id3v2.h  id3v23.c  init.c  langcodes.c  langcodes.h  main.c  modify.c  opts.c  output.c  params.h  (+16 more)
