# require autoconf 2.61
AC_PREREQ([2.61])
AC_INIT([lib313], [0.0.2], [vs@kp4.ru])
AC_CONFIG_AUX_DIR([build])

AM_INIT_AUTOMAKE([-Wall -Werror])
AM_CONFIG_HEADER([config.h])

# Checks for programs
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

# Checks for header files
AC_HEADER_STDC

AC_OUTPUT([Makefile src/Makefile])
