AC_PREREQ(2.64)
AC_INIT([lib313],[0.0.2],[vs@kp4.ru])
AC_CONFIG_AUX_DIR([build])

AM_INIT_AUTOMAKE([-Wall -Werror])
AC_CONFIG_HEADERS([config.h])

# Checks for programs
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

# Checks for header files
AC_HEADER_STDC

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
